compiler/test-data/parser/theme/errors/empty_instruction_set.frel
module test

theme AppTheme {
    set empty_set { }
}
